# asuntohinnat

./: .gitignore  pyproject.toml  requirements.txt
asuntodata/: db.sqlite3  manage.py
asuntodata/asuntodata/: asgi.py  settings.py  urls.py  wsgi.py
asuntodata/templates/: base.html
asuntodata/templates/areas/: area.html
asuntodata/templates/charts/: dashboard_with_pivot.html
asuntodata/web/: models.py  urls.py  views.py
asuntodata/web/migrations/: 0001_initial.py
asuntodata/web/services/: PXWeb.py  parseResponse.py
py_env_asunnot/Scripts/: activate  activate.bat  activate.xsh  django-admin.py
